...
                .padding(vertical = 16.dp), horizontalAlignment = Alignment.CenterHorizontally
        )
        {

            OutlinedTextField(
                value = form.name,
                modifier = Modifier.testTag("Name_medical"),
                onValueChange = { form = form.copy(name = it)   },
                label = { Text("Nombre") },
                trailingIcon = {
                    if (form.name=="" && intent) {
                        Icon(
                            painter = painterResource(R.drawable.ic_error),
...
            )

            Spacers()//10

            OutlinedTextField(
                value = form.dni,
                modifier = Modifier.testTag("Dni_medical"),
                onValueChange = { form = form.copy(dni = it)  },
                label = { Text("DNI") },
                trailingIcon = {
                    if (form.dni=="" && intent) {
                        Icon(
                            painter = painterResource(R.drawable.ic_error),
...
                    }
                }
            )
            Spacers()//10
            OutlinedTextField(
                value = form.tuition,
                modifier = Modifier.testTag("Tuition_medical"),
                onValueChange = { form = form.copy(tuition = it) },
                label = { Text("Matricula") },
                trailingIcon = {
                    if (form.tuition=="" && intent) {
                        Icon(
                            painter = painterResource(R.drawable.ic_error),
...
                    }
                }
            )
            Spacers()//10
            OutlinedTextField(
                value = form.email.replace("\\n\\r", ""),
                modifier = Modifier.testTag("Correo_medical"),
                onValueChange = {
                    form = form.copy(email = it.replace("\\n\\r", ""))
                    isErrorEmail = !esCorreo(form.email)
                },
                label = { Text("Correo") },
                trailingIcon = {
...
                    }
                }
            )
            Spacers()//10
            OutlinedTextField(
                value = form.password,
                modifier = Modifier.testTag("Pass_medical"),
                onValueChange = { form = form.copy(password = it) },
                label = { Text("Contraseña") },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),//2
                singleLine = true,
                visualTransformation =
                if (hidden) PasswordVisualTransformation() else VisualTransformation.None,//3
...
                    IconButton(onClick = { hidden = !hidden }) {
                        val vector = painterResource(//5
                            if (hidden) R.drawable.ic_visibility
                            else R.drawable.ic_visibility_off
                        )
                        val description =
                            if (hidden) "Ocultar contraseña medicals" else "Revelar contraseña medicals" //6
                        Icon(painter = vector, contentDescription = description)
                    }
                    if (form.password=="" && intent) {
                        Icon(
                            painter = painterResource(R.drawable.ic_error),
                            contentDescription = "Error",
...
                    }
                }
            )
            Spacers()//10
            OutlinedTextField(
                value = passwordconfirm,
                modifier = Modifier.testTag("ConfPass_medical"),
                onValueChange = {
                    passwordconfirm = it
                    isErrorPassword = passwordconfirm != form.password},
                label = { Text("Confirmar contraseña") },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),//2
                singleLine = true,
...
                Text(
                    text = "Las contraseñas no coinciden",
                    color = MaterialTheme.colors.error,
                    style = MaterialTheme.typography.caption,
                    modifier = Modifier
                        .padding(start = 16.dp)
                        .testTag("medical_confirm_pass_error")
                )
            }

            Spacers()//10
            BlockSpace()//20

...
