...
                defaultElevation = 5.dp,
                pressedElevation = 5.dp,
                disabledElevation = 0.dp
            )
        ) {
            Text(
                text = "Registrarse",
                fontSize = 15.sp,
                color = Color.Black,
                fontFamily = FontFamily.SansSerif
            )

        }
...
